--- a/index.html
+++ b/index.html
@@ -326,36 +326,23 @@
         <div class="row">
           <div class="col-sm-5 contact-info">
             <h3>Contact Info</h3>
-            <p><i class="fa fa-map-marker"></i> Avtozavodska 27в, app.47, Kiev, Ukraine </p>
-            <p><i class="fa fa-phone"></i> (+380) 96-19234-69 | (+380) 95-60083-77 </p>
+            <p><i class="fa fa-map-marker"></i> Kiev, Ukraine </p>
+            <p><i class="fa fa-phone"></i> (+380) 99-37653-44 </p>
             <p><i class="fa fa-envelope-o"></i> vova.chornohal@gmail.com</p>
           </div>
           
           <div class="col-sm-7">
-          <h3>Get in Touch</h3>
-              <form role="form" method="POST" action="contact-form-submission.php" class="form-horizontal" id="contact-form">
-                  <div class="control-group">
-                      <label class="control-label" for="input1">Name</label>
-                      <div class="controls">
-                          <input type="text" name="contact_name" id="input1" placeholder="Your name" class="form-control input-lg ">
-                      </div>
-                  </div>
-                  <div class="control-group">
-                      <label class="control-label" for="email">Email Address</label>
-                      <div class="controls">
-                          <input type="text" id="input2" name="contact_email" id="email" placeholder="Your email address" class="form-control input-lg">
-                      </div>
-                  </div>
-                  <div class="control-group">
-                      <label class="control-label" for="input3">Message</label>
-                      <div class="controls">
-                          <textarea name="contact_message" id="input3" rows="8" class="form-control input-lg"></textarea>
-                      </div>
-                  </div>
-                  <div class="form-actions">
-                      <button type="submit" class="btn btn-default btn-lg btn-block">Submit Message</button>
-                  </div>
-              </form><!-- End contact-form -->
+          <h3>More ways to get in touch:</h3>
+              <div class="social-icons">
+                        <a href="https://twitter.com/Vladimir_Che_" class="btn btn-round btn-clear btn-twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/volodymyr.chornohal" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
+<!--                    <a href="https://www.dribbble.com/" class="btn btn-round btn-clear btn-dribbble"><i class="fa fa-dribbble"></i></a>
+                        <a href="https://www.instagram.com/" class="btn btn-round btn-clear btn-instagram"><i class="fa fa-instagram"></i></a> -->
+                        <a href="https://www.linkedin.com/in/volodymyrchornohal" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
+<!--                    <a href="https://www.pinterest.com/" class="btn btn-round btn-clear btn-pinterest"><i class="fa fa-pinterest"></i></a> -->
+                        <a href="https://plus.google.com/u/0/+VolodymyrChornohalVC" class="btn btn-round btn-clear btn-google"><i class="fa fa-google-plus"></i></a>
+                    
+                </div>
           </div>
         </div><!-- End row -->
 
