--- a/index.html
+++ b/index.html
@@ -319,9 +319,8 @@
      <section id="page-contact" class="page-contact">
           <div class="container">
               <header class="section-header">
-                  <h2 class="section-title"><span>Contact</span></h2>
+                  <h2 class="section-title"><span>Hire</span></h2>
                     <div class="spacer"></div>
-                       <p class="section-subtitle">Be free to drop a msg. </p>
               </header>
         <div class="row">
           <div class="col-sm-5 contact-info">
@@ -336,12 +335,8 @@
               <div class="social-icons">
                         <a href="https://twitter.com/Vladimir_Che_" class="btn btn-round btn-clear btn-twitter"><i class="fa fa-twitter"></i></a>
                         <a href="https://www.facebook.com/volodymyr.chornohal" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
-<!--                    <a href="https://www.dribbble.com/" class="btn btn-round btn-clear btn-dribbble"><i class="fa fa-dribbble"></i></a>
-                        <a href="https://www.instagram.com/" class="btn btn-round btn-clear btn-instagram"><i class="fa fa-instagram"></i></a> -->
                         <a href="https://www.linkedin.com/in/volodymyrchornohal" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
-<!--                    <a href="https://www.pinterest.com/" class="btn btn-round btn-clear btn-pinterest"><i class="fa fa-pinterest"></i></a> -->
                         <a href="https://plus.google.com/u/0/+VolodymyrChornohalVC" class="btn btn-round btn-clear btn-google"><i class="fa fa-google-plus"></i></a>
-                    
                 </div>
           </div>
         </div><!-- End row -->
