--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Chornohal Volodymyr - Professional Web Developer.</title>
-        <meta name="description" content="An experienced web developer with a strong practical background.">
+        <title>Chornohal Volodymyr - Professional Software Engineer.</title>
+        <meta name="description" content="An experienced software engineer with a strong practical background.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="">
 
@@ -78,7 +78,7 @@
             <div class="row">
                 <header class="centered">
                     <h1>Volodymyr Chornohal</h1>
-                    <p>PROFESSIONAL WEB DEVELOPER</p>
+                    <p>PROFESSIONAL Software Engineer</p>
                 </header>
                 <div class="social-icons">
                         <a href="https://twitter.com/Vladimir_Che_" class="btn btn-round btn-clear btn-twitter"><i class="fa fa-twitter"></i></a>
@@ -100,7 +100,7 @@
                 <header class="section-header">
                     <h2 class="section-title">Personal Profile</h2>
                     <div class="spacer"></div>
-                    <p class="section-subtitle">Web Developer.</p>
+                    <p class="section-subtitle">Software Engineer.</p>
                 </header>
             <div class="row">
               <div class="col-md-3">
@@ -108,9 +108,7 @@
               </div>
                 <div class="col-md-9">
                     <p></p>
-                    <p>I'm currently looking for a web developer opportunity that will allow me to work independently or alongside an expert team of developers. Thereby helping to drive my career progression to more senior roles in the future.</p>
-                    <p>Ready to work 24/7, completely sacrificing myself to web development, putting into practice existing knowledge and learning new things.</p>
-                    <p>I'm an experienced web developer with a strong practical background in SEO, IT and marketing experience.</p>
+                    <p>I'm an experienced sofware engineer with a strong practical background in Java, Scala and JS/TS.</p>
                     <p>Able to think through a problem coupled with the confidence to make ideas heard. Have a proven ability to maintain and enhance company software with the aim of improving operational functionality in line with business requirements.</p>
                 </div>
             </div>
@@ -127,39 +125,39 @@
                 </header>
             <div class="row">
               <div class="col-md-2">
-               <span class="chart" data-percent="85">
+               <span class="chart" data-percent="100">
                       <span class="percent"></span>
-                      <h3>Symphony 2.6</h3>
+                      <h3>Java</h3>
                </span>
             </div>
                <div class="col-md-2 ">
-               <span class="chart" data-percent="60">
+               <span class="chart" data-percent="95">
                       <span class="percent"></span>
-                      <h3>SQL</h3>
-               </span>
-            </div>
-               <div class="col-md-2">
-               <span class="chart" data-percent="75">
-                      <span class="percent"></span>
-                       <h3>MongoDB</h3>
-               </span>
-            </div>
-               <div class="col-md-2">
-               <span class="chart" data-percent="80">
-                      <span class="percent"></span>
-                      <h3>HTML/CSS</h3>
-               </span>
-            </div>
-               <div class="col-md-2">
-               <span class="chart" data-percent="65">
-                      <span class="percent"></span>
-                      <h3>jQuery</h3>
+                      <h3>Scala</h3>
                </span>
             </div>
                <div class="col-md-2">
                <span class="chart" data-percent="90">
                       <span class="percent"></span>
-                       <h3>PHP</h3>
+                       <h3>JS/TS</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <span class="chart" data-percent="100">
+                      <span class="percent"></span>
+                      <h3>HTML/CSS</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <span class="chart" data-percent="75">
+                      <span class="percent"></span>
+                      <h3>Ruby</h3>
+               </span>
+            </div>
+               <div class="col-md-2">
+               <span class="chart" data-percent="90">
+                      <span class="percent"></span>
+                       <h3>SQL</h3>
                </span>
             </div>
           </div>
@@ -229,92 +227,24 @@
                  <div class="col-md-4">
                   <article class="experience">
                     <header>
-                      <h3>POPEL Interactive Agency</h3>
-                      <p>Backend Developer / Kyyiv, UA / 2015 - Current</p>
+                      <h3>Infopulse</h3>
+                      <p>Software Engineer / Kyyiv, UA / 2016-2019</p>
                     </header>
-                      <p>Symfony2 project development incorporating mongodb as a database, JS for asynchronous parts and Twig for binding views with the backend. Used Git for version control bundled with gitlab.com and staging to server.
-                          PHPStorm8 – is my IDE of choice.</p>
+                      <p>Java/Maven GWT.</p>
                   </article>
                 </div>
                   <div class="col-md-4">
                   <article class="experience">
                     <header>
-                      <h3>Wizard Postproduction</h3>
-                       <p>SEO Strategist / Kyyiv, UA / 2013 - 2014</p>
+                      <h3>Inscale</h3>
+                       <p>Sofware Engineer / Kyyiv, UA / 2019 - 2023</p>
                     </header>
-                      <p>Frontend and backend optimisation of websites. Development of SEO, SMO and Media Presence plans; writing technical specifications and implementing plans. </p>
+                      <p>Fullstack Software Engineer Scala/Angular. </p>
                   </article>
-                </div>
-                <div class="col-md-4">
-                <article class="experience">
-                  <header>
-                    <h3>Devellar</h3>
-                     <p>SEO/SMM Manager / Kyyiv, UA / 2008 - 2013</p>
-                  </header>
-                    <p>Websites and apps projects management, using JIRA and Redmine. Software testing and reporting, using version control systems and debugging tools. Editing and tuning WordPress, Joomla and Drupal websites. Search Engine Optimization. Social Media Optimization.</p>
-                </article>
                 </div>
             </div>
         </div>
     </section><!-- experience ends -->
-    <!-- portfolio begins -->
-     <section id="page-portfolio" class="page-portfolio">
-          <div class="container">
-            <div class="row">
-                <header class="section-header">
-                    <h2 class="section-title"><span>Portfolio</span></h2>
-                      <div class="spacer"></div>
-                    <p class="section-subtitle">Some recent projects. </p>
-                </header>
-           
-                <div id="grid-controls-wrapper">
-                <ul class="nav nav-pills center-pills grid-controls">
-                  <li class="active filter"><a href="javascript:void(0)" data-filter="*">All</a></li>
-                  <li class="filter" ><a href="javascript:void(0)" data-filter=".branding">CMS</a></li>   
-                  <li class="filter" ><a href="javascript:void(0)" data-filter=".design">JQuery</a></li>            
-                  <li class="filter"><a href="javascript:void(0)"  data-filter=".photography">HTML</a></li>
-                  <li class="filter" ><a href="javascript:void(0)" data-filter=".web">PHP</a></li>
-                </ul>
-              </div>
-            
-                <div>
-                  <ul id="grid" class="grid-wrapper">
-                      <li class="mix web" >
-                       <a href="img/portfolio/large/01.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/01.png"  alt="" >
-                      </a> </li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/02.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/02.png" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/03.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/03.png" alt="" ></a></li>
-                      <li class="mix web">
-                        <a href="img/portfolio/large/04.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/04.png" alt="" ></a></li>
-                      <li class="mix branding">
-                        <a href="img/portfolio/large/05.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/05.png" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/06.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/06.png" alt="" ></a></li>
-                      <li class="mix photography">
-                        <a href="img/portfolio/large/07.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/07.png" alt="" ></a></li>
-                      <li class="mix photography">
-                        <a href="img/portfolio/large/08.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/08.png" alt="" ></a></li>
-                      <li class="mix photography">
-                        <a href="img/portfolio/large/09.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/09.png" alt="" ></a></li>
-                      <li class="mix web">
-                        <a href="img/portfolio/large/10.jpg"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/10.jpg" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/11.jpg"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/11.jpg" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/12.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/12.png" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/13.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/13.png" alt="" ></a></li>
-                      <li class="mix design">
-                        <a href="img/portfolio/large/14.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/14.png" alt="" ></a></li>
-                         <li class="mix branding">
-                        <a href="img/portfolio/large/15.png"><div class="overlay"><i class="fa fa-search"></i></div><img src="img/portfolio/small/15.png" alt="" ></a></li>
-                  </ul>
-                </div>
-            </div>
-        </div>
-    </section><!-- portfolio ends -->
     <!-- contact begins -->
      <section id="page-contact" class="page-contact">
           <div class="container">
